@@ -1,3 +1,9 @@
+Tue Feb 10 11:19:11 2015  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/ftp.rb (chdir, delete, gettextfile, mdtm, mkdir, nlst,
+	  putbinaryfile, puttextfile, rename, rmdir, size): support
+	  Pathname. Patch by Joe Rafaniello. [fix GH-828]
+
 Mon Feb  9 16:36:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* tool/make-snapshot (package): get rid of loading unbundled and
